# lambda_templates

./: .gitignore
.github/actions/get-ssm-parameters/: index.js
.github/workflows/: dev-go-hello-world-container.yml  dev-rust-hello-world-deploy.yml  prd-go-hello-world-container.yml
fargate/go/: .gitignore
fargate/go/go-hello-world-container/: Makefile  docker-compose.yml
fargate/rust/cfn_templates/: 01_security.yml  02_ecs_cluster.yml  03_ecr.yml  04_ecs_task.yml
fargate/rust/rust-hello-world-container/: Makefile  docker-compose.yml
fargate_spot/go/cfn_templates/: 00_sqs.yml  01_security.yml  02_ecs_cluster.yml  03_ecr.yml  04_ecs_service_task.yml  04_managed_task.yml  05_auto_scaling.yml
fargate_spot/go/go-hello-world-container/: Makefile  compose.yml
go/.github/workflows/: dev-go-hello-world-deploy.yml  prd-go-hello-world-deploy.yml
go/go-hello-world/: Makefile  template.yaml
go/go-hello-world/app/: Makefile  go.sum  main.go
go/go-hello-world/docker/: Dockerfile
julia/julia-hello-world/: template.yml
julia/julia-hello-world/docker/: Dockerfile
lambda/go/go-hello-world/: Makefile  template.yaml
lambda/go/go-send-sqs/: Makefile  template.yaml
lambda/julia/julia-hello-world/: Makefile  bootstrap
lambda/rust/rust-hello-world/: Makefile  template.yml
lambda/rust/rust-hello-world/app/: Cargo.toml
lambda/rust/rust-hello-world/app/src/: main.rs
lambda/scala/scala-hello-world/: Makefile  build.sbt
rust/rust-hello-world/: Makefile  template.yml
rust/rust-hello-world/app/: Cargo.toml  Makefile
scala/scala-hello-world/: template.yml
(+100 files in other folders)
